--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,11 @@
         "doctrine/doctrine-bundle": "^1.10 || ^2.0",
         "drewm/mailchimp-api": "^2.2",
         "excelwebzone/recaptcha-bundle": "^1.4.2",
-        "friendsofphp/php-cs-fixer": "^3.0",
         "handcraftedinthealps/zendsearch": "^2.0",
         "jackalope/jackalope-doctrine-dbal": "^1.3.2",
         "jangregor/phpstan-prophecy": "^1.0",
         "massive/search-bundle": "^2.0",
+        "php-cs-fixer/shim": "^3.57",
         "phpspec/prophecy": "^1.14",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-doctrine": "^1.0",
